--- a/mybib.bib
+++ b/mybib.bib
@@ -209,15 +209,6 @@ volume={},
 pages={},
 }
 
-@article{Dirk2013,
-author={Dirk Nuyens},
-title={The construction of good lattice rules and polynomial lattice rules},
-year={2013},
-journal={arXiv:1308.3601 [math.NA]},
-volume={},
-pages={},
-}
-
 @article{WahbaGCV,
 	author={Grace Wahba},
 	title={A Comparison of GCV and GML for Choosing the Smoothing Parameter in the Generalized Spline Smoothing Problem},
@@ -256,4 +247,44 @@ pages={},
 	title = {Periodizing transformation for numerical integration},
 	volume = {66},
 	booktitle = {Journal of Computational and Applied Mathematics}
+}
+
+@article{Nuyens2013,
+   title={The construction of good lattice rules and polynomial lattice rules},
+   ISBN={9783110317930},
+   url={http://dx.doi.org/10.1515/9783110317930.223},
+   DOI={10.1515/9783110317930.223},
+   journal={Uniform Distribution and Quasi-Monte Carlo Methods},
+   publisher={DE GRUYTER},
+   author={Nuyens, Dirk}
+}
+
+@phdthesis{JagThesis19a,
+	author  = {Jagadeeswaran Rathinavel},
+	school  = {Illinois Institute of Technology, Chicago},
+	title   = {FFast automatic {B}ayesian cubature using matching kernels and designs},
+	type    = {PhD Thesis},
+	year    = {Dec 2019},
+	url  = {www.math.iit.edu}
+}
+
+@inproceedings{Keller2013,
+	Author = {A. Keller},
+	Pages = {213-–249},
+	Title = {{Q}uasi-{M}onte {C}arlo image synthesis in a nutshell},
+	Booktitle = {{M}onte {C}arlo and Quasi-{M}onte {C}arlo Methods {2012}},
+	Editor = {J. Dick and F. Y. Kuo and G. W. Peters and
+	I. H. Sloan},
+	Publisher = {Springer Berlin Heidelberg},
+	Pubtype = ed,
+	Series = {Springer Proceedings in Mathematics and Statistics},
+	Volume = {65},
+	Year = {2013}}
+
+@book{Goodfellow-et-al-2016,
+	title={Deep Learning},
+	author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+	publisher={MIT Press},
+	note={\url{http://www.deeplearningbook.org}},
+	year={2016}
 }
