revising the numerical section

--- a/mybib.bib
+++ b/mybib.bib
@@ -256,7 +256,8 @@ pages={},
    DOI={10.1515/9783110317930.223},
    journal={Uniform Distribution and Quasi-Monte Carlo Methods},
    publisher={DE GRUYTER},
-   author={Nuyens, Dirk}
+   author={Nuyens, Dirk},
+   year={2013}
 }
 
 @phdthesis{JagThesis19a,
