--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -583,7 +583,7 @@ Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\math
 
 \label{FJ:sec:NumExp}
 
-\JRNote{use uniformly randomly chosen $\varepsilon$ instead 4 fixed}
+% \JRNote{use uniformly randomly chosen $\varepsilon$ instead 4 fixed}
 
 The fast Bayesian cubature algorithm using digital sequences and the digital shift invariant kernel in \eqref{FJ:eqn:digital_shift_in_kernel} with order $r=1$ has been coded as \texttt{cubBayesNet\_g}.  We illustrate our algorithm for three common examples, which were also treated in \cite{RatHic19a} via fast Bayesian cubature based on rank-1 lattices and shift invariant kernels and coded as \texttt{cubBayesLattice\_g}. The first example evaluates a multivariate Gaussian probability, the second example is Keister's function \cite{Kei96}, and the final example is pricing an Asian arithmetic mean option.  
 
@@ -594,7 +594,7 @@ For each integral example, each $\varepsilon$, and each stopping criteria---empi
 
 The integral if formulated as in \cite{RatHic19a} and following the variable transformation introduced by Alan Genz \cite{Gen92}. The simulation results are summarized in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE}, \ref{FJ:fig:Sobol-mvn-guaranteed-FB}, and \ref{FJ:fig:Sobol-mvn-guaranteed-GCV}.  In all cases, \texttt{cubBayesNet\_g} returns an approximation within the prescribed error tolerance. For  $\varepsilon=10^{-5}$ with the empirical Bayes stopping criterion, \texttt{cubBayesNet\_g} takes about 3 seconds as shown in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-MLE} whereas using a Mat\'ern kernel requires 30 seconds to obtain the same accuracy as shown in \cite{RatHic19a}. This highlights the speed-ups possible using fast Bayesian cubature.
 
-The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform which is slower than MATLAB's fast Fourier transform, due to the latter's faster implementation in machine code.  We suspect that this is part of the reason that \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example.  Also, \texttt{cubBayesLattice\_g} used on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} used on average $n \approx 32{,}000$ samples.
+The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform which is slower than MATLAB's fast Fourier transform, due to the latter's faster implementation in machine code. We suspect that this is part of the reason that \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example. Also, \texttt{cubBayesLattice\_g} used higher order kernels whereas here we are limited to first order kernels only. The \texttt{cubBayesLattice\_g} used on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} used on average $n \approx 32{,}000$ samples.
 
 Amongst the three stopping criteria, GCV achieved an acceptable approximation faster than others but it is less conservative. 
 One can also observe from the figures that the credible intervals are narrower than in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-MLE}.
@@ -642,44 +642,15 @@ This multidimensional integral function comes from \cite{Kei96} and is inspired 
 f_\textup{Keister}(\bsx) &= \pi^{d/2} \cos\left(\norm{ \Phi^{-1}(\bsx)/2}\right)  ,
 \end{align}
 and $\Phi$ is the standard normal distribution.
-%\begin{figure}
-%	\captionsetup[subfigure]{labelformat=empty}
-%	\begin{subfigure}[h]{0.48\linewidth}
-%		\includegraphics[width=1.1\linewidth]{Keister_wholeR_1D}
-%	\end{subfigure}
-%	\begin{subfigure}[h]{0.48\linewidth}
-%		\includegraphics[width=1.1\linewidth]{Keister_cube_1D}
-%	\end{subfigure}
-%	\caption{Keister function in d=2 and its transformed version in $[0,1]^2$ with various values of $a$.}
-%	\label{FJ:fig:keister}
-%\end{figure}
+
 The true value of $\mu$ can be calculated iteratively in terms of a quadrature as follows:  
 \begin{equation*}
 \mu = \frac{2 \pi^{d/2} I_c(d)}{\Gamma(d/2)}, \quad d=1,2, \ldots
 \end{equation*}
-where $\Gamma$ denotes the gamma function, and the definition of $I_c$ can be found in \cite{RatHic19a}.
-\iffalse
-\JRNote{cite prev paper or the orig source instead}
-\begin{align*}
-I_c(1) &= \frac{\sqrt{\pi}}{2 \exp(1/4)}, 
-\\
-I_s(1) &= \int_{x=0}^\infty \exp(-\bsx^T\bsx)\sin(\bsx) \, \textup{d}\bsx 
-\\
-& =  0.4244363835020225,
-\\
-I_c(2) &= \frac{1-I_s(1)}{2}, \qquad
-I_s(2) = \frac{I_c(1)}{2}
-\\
-I_c(j) &= \frac{(j-2)I_c(j-2)-I_s(j-1)}{2},
-\qquad j =3,4,\ldots
-\\
-I_s(j) &= \frac{(j-2)I_s(j-2)-I_c(j-1)}{2},
-\qquad j =3,4,\ldots.
-% ref: https://www.mathworks.com/help/matlab/ref/gamma.html
-\end{align*}
-\fi
+where $\Gamma$ denotes the gamma function, and the definition of $I_c$ can be found in \cite{RatHic19a} (Section 5.2).
 
-Figures \ref{FJ:fig:Sobol-keister-guaranteed-MLE}, \ref{FJ:fig:Sobol-keister-guaranteed-FB} and \ref{FJ:fig:Sobol-keister-guaranteed-GCV} summarize the numerical tests for this case. We used  dimension $d=4$, and $r=1$.  No periodization transform was used as the integrand need not be periodic. 
+
+Figures \ref{FJ:fig:Sobol-keister-guaranteed-MLE}, \ref{FJ:fig:Sobol-keister-guaranteed-FB} and \ref{FJ:fig:Sobol-keister-guaranteed-GCV} summarize the numerical tests for this case. We used  dimension $d=4$, and order $r=1$.  No periodization transform was used as the integrand need not be periodic. 
 % In this example, we use $r=1$ order kernel whereas \texttt{cubBayesLattice\_g} in \cite{RatHic19a}, smoother $r=2$ order kernel was used. 
 In \cite{RatHic19a} \texttt{cubBayesLattice\_g} used a much smoother kernel that used here.
 This necessitates \texttt{cubBayesNet\_g} to use more samples for integration.
@@ -712,7 +683,11 @@ As observed from the figures, the GCV stopping criterion, in Figure \ref{FJ:fig:
 
 \subsection{Option Pricing}
 
-The price of financial derivatives can often be modeled by high dimensional integrals. If the underlying asset is described in terms of a discretized geometric Brownian motion, then the fair price of the option is:
+The price of financial derivatives can often be modeled by high dimensional integrals. 
+We refer to the formulation of the fair price of the option as in \cite{RatHic19a}, where the underlying asset is described in terms of a discretized geometric Brownian motion.
+
+\iffalse
+, then  is:
 \begin{equation*}
 \mu = \int_{\R^d} \text{payoff}(\bsz) \frac{\exp(\frac 12 \bsz^T\mathsf{\Sigma}^{-1}\bsz)}{\sqrt{(2\pi)^d \det(\mathsf{\Sigma})}} \, \textup{d}\bsz = \int_{[0,1]^d} f(\bsx) \, \textup{d}\bsx,
 \end{equation*} 
@@ -730,6 +705,7 @@ The Asian arithmetic mean call option has a payoff of the form
 S_j(\bsz) &= S_0 \exp\bigl((r-\sigma^2/2)jT/d + \sigma \sqrt{T/d} z_j \bigr).
 \end{align*}
 Here, $T$ denotes the time to maturity of the option, $d$ the number of time steps, $S_0$ the initial price of the stock, $r$ the interest rate, $\sigma$ the volatility, and $K$ the strike price.  
+\fi
 
 %\Subsection{Option Pricing}
 The Figures \ref{FJ:fig:Sobol-optprice-guaranteed-MLE}, \ref{FJ:fig:Sobol-optprice-guaranteed-FB} and 
@@ -737,7 +713,7 @@ The Figures \ref{FJ:fig:Sobol-optprice-guaranteed-MLE}, \ref{FJ:fig:Sobol-optpri
 $
 T = 1/4, \ \ d = 13, \ \ S_0 = 100, \ \ r =  0.05, \ \ \sigma = 0.5, \ \ K = 200
 $, same as used in the experiments of \texttt{cubBayesLattice\_g} \cite{RatHic19a}.
-As mentioned before, this integrand has a kink caused by the $\max$ function, so, \texttt{cubBayesNet\_g} could be more efficient than \texttt{cubBayesLattice\_g}, as no periodization transform is required. This can be observed from the number of samples used for intgration to meet the same error threshold. For the error tolerance, $\varepsilon=10^{-3}$,  \texttt{cubBayesLattice\_g} used $n=2^{20}$ samples, whereas \texttt{cubBayesNet\_g} used $n=2^{17}$ samples.
+As mentioned before, this integrand has a kink caused by the $\max$ function, so, \texttt{cubBayesNet\_g} could be more efficient than \texttt{cubBayesLattice\_g}, as no periodization transform is required. This can be observed from the number of samples used for intgration to meet the same error threshold. For the error tolerance, $\varepsilon=10^{-3}$,  \texttt{cubBayesLattice\_g} used $n \approx 2^{20}$ samples, whereas \texttt{cubBayesNet\_g} used $n \approx 2^{17}$ samples.
 
 
 \begin{figure}
@@ -766,13 +742,13 @@ As mentioned before, this integrand has a kink caused by the $\max$ function, so
 % \JRNote{Move this to end of chapter}
 
 As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, our algorithm computed the integral within user specified threshold most of the time except on a few occasions. This is especially the case with option pricing example due to the complexity and high dimension of the integrand. 
-Also notice that our \texttt{cubBayesNet\_g} algorithm finished within 40 seconds for Keister and multivariate Gaussian. Option pricing took little above 100 seconds due to the complexity of integrand.
+Also notice that our algorithm \texttt{cubBayesNet\_g}, finished within 40 seconds for Keister and multivariate Gaussian. Option pricing took little above 100 seconds due to the complexity of integrand.
 
-Another noticeable aspect from the plots is how much the error bounds differ from the true error. For option pricing example, the error bound is not as conservative as it is for the multivariate Gaussian and Keister examples. A possible reason is that the latter integrands are significantly smoother than the covariance kernel.  This is a matter for further investigation.
+Another noticeable aspect from the plots is how much the error bounds closer to the true error compared to \texttt{cubBayesLattice\_g}. 
+A possible reason is that the periodization transform is not applied to the integrands, keeping the smoothness of the integrand unchanged.
+% This is a matter for further investigation.
 
 % As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, the \texttt{cubBayesNet\_g} algorithm computes the integral within user specified threshold most of the times except on a few occasions. This is especially the case with option pricing example due to the complexity and high dimension of the integrand as mentioned in the previous example. 
-
-
 
 
 Most noticeable aspect from the plots of \texttt{cubBayesNet\_g} is how closer the error bounds are to the true error. 
@@ -785,16 +761,14 @@ Similar to \texttt{cubBayesLattice\_g} in \cite{RatHic19a}, it missed meeting th
 
 \section{Conclusion and future work}
 \label{FJ:sec:conclusion-future-work}
-% Extended the fast Bayesian stopping criterion to use digital nets.  Demonstrated using Matlab implementation.
 
+In this chapter, we extended our fast automatic Bayesian cubature to digital net sampling via digital shift-invariant covariance kernels and fast Walsh transforms. A Bayesian perspective, as developed in \cite{RatHic19a}, is used to construct a credible interval for the integral to achieve the user defined error tolerance. 
 
+Implementation of our algorithm \texttt{cubBayesNet\_g}, is available in the Guaranteed Automatic Integration Library (GAIL).  One major advantage this algorithm, unlike the \texttt{cubBayesLattice\_g} developed in \cite{RatHic19a}, is the integrand does not need to be periodic.
+However, special structure of both the sequences and the kernels are required to take advantage of integrand smoothness.
+We demonstrated \texttt{cubBayesNet\_g} using three example integrand compared with \texttt{cubBayesLattice\_g}. 
 
-In this chapter, we extended our fast automatic Bayesian cubature to digital net sampling via digital shift-invariant covariance kernels and fast Walsh transforms.
-A Bayesian perspective \cite{RatHic19a}, is used to construct a credible interval for the integral to achieve the user defined error tolerance. 
-Implementation of our algorithm \texttt{cubBayesNet\_g} is available in the Guaranteed Automatic Integration Library (GAIL).  One major advantage this alogithm is, integrand does not need to be periodic unlike the algorithm in \cite{RatHic19a}.
-We deemonstrated \texttt{cubBayesNet\_g} using three example integrand compared with \texttt{cubBayesLattice\_g}. 
-
-Accuracy and spped of the algorithm could be improved by using smoother higher order digital nets and digital shift-invariant covariance kernels. This could help with the smoother integrands. The exisitng implmentation  \texttt{cubBayesNet\_g} uses only the first order kernel and nets.
+The \texttt{cubBayesNet\_g} in the current implementation uses only the first order kernel and digital nets. Accuracy and speed of the algorithm could be improved by using smoother higher order digital nets and digital shift-invariant covariance kernels. This could help with the smoother integrands. 
 
 
 
