--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -573,8 +573,6 @@ Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\math
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Jags: TODO
 % Read and verify 1.3 Digital Nets
-% Remove unnecessary packages
-% f_Genz refer to old paper
 %
 
 
@@ -770,7 +768,7 @@ We demonstrated \texttt{cubBayesNet\_g} using three example integrand compared w
 
 The \texttt{cubBayesNet\_g} in the current implementation uses only the first order kernel and digital nets. Accuracy and speed of the algorithm could be improved by using smoother higher order digital nets and digital shift-invariant covariance kernels. This could help with the smoother integrands. 
 
-
+\JRNote{mention any shortcomings? Especially higher dimensions}
 
 % \bibliographystyle{abbrvnat}
 \bibliographystyle{spmpsci}
